force-app/main/default/objects/Account/fields/Audit_Waste_Oil__c.field-meta.xml
<CustomField>
    <fullName>Audit_Waste_Oil__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Audit Waste Oil</label>
    <type>Checkbox</type>
</CustomField>