force-app/main/default/objects/Account/fields/AVID_Not_found__c.field-meta.xml
<CustomField>
    <fullName>AVID_Not_found__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag indicates a user looked for an Avention Company but could not find it.</description>
    <inlineHelpText>If you looked for an Avention Company and could not find it check this box.</inlineHelpText>
    <label>Company Not found</label>
    <type>Checkbox</type>
</CustomField>