force-app/main/default/objects/Account/fields/Backend_Hybrid_Central_LOBs__c.field-meta.xml
<CustomField>
    <fullName>Backend_Hybrid_Central_LOBs__c</fullName>
    <description>To store Hybrid Central values in Text and display in Child Accounts</description>
    <label>Backend Hybrid Central LOBs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>