force-app/main/default/objects/Account/fields/Backend_Hybrid_Local_LOBs__c.field-meta.xml
<CustomField>
    <fullName>Backend_Hybrid_Local_LOBs__c</fullName>
    <description>To store Hybrid Local values in Text and display in Child Accounts</description>
    <label>Backend Hybrid Local LOBs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>