force-app/main/default/objects/Account/fields/Bill_To_Credit_Status__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Credit_Status__c</fullName>
    <description>Displays credit status of co-linked Customer</description>
    <formula>IF(TEXT(Parent.Credit_Status__c) = &quot;Hold&quot;, 
IMAGE(&quot;https://cleanharbors--c.na54.content.force.com/servlet/servlet.FileDownload?file=0150a000002ebac&quot;, &quot;Hold&quot;), 
TEXT(Parent.Credit_Status__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays credit status of co-linked Customer Account (Bill To).</inlineHelpText>
    <label>Bill To Credit Status</label>
    <type>Text</type>
</CustomField>