force-app/main/default/objects/Account/fields/Billing_Address_ID__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_ID__c</fullName>
    <label>Billing Address ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>