force-app/main/default/objects/Account/fields/Billing_Expired__c.field-meta.xml
<CustomField>
    <fullName>Billing_Expired__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check box to expire the current alternate billing address</inlineHelpText>
    <label>Billing Expired</label>
    <type>Checkbox</type>
</CustomField>