force-app/main/default/objects/Account/fields/Branch_Admin2__c.field-meta.xml
<CustomField>
    <fullName>Branch_Admin2__c</fullName>
    <label>Branch Admin2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>