force-app/main/default/objects/Account/fields/Branch_Admin__c.field-meta.xml
<CustomField>
    <fullName>Branch_Admin__c</fullName>
    <label>Branch Admin</label>
    <length>100</length>
    <type>Text</type>
</CustomField>