force-app/main/default/objects/Account/fields/Branch_AGM__c.field-meta.xml
<CustomField>
    <fullName>Branch_AGM__c</fullName>
    <label>Branch DVP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>