force-app/main/default/objects/Account/fields/Branch_BGM__c.field-meta.xml
<CustomField>
    <fullName>Branch_BGM__c</fullName>
    <label>Branch BGM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>