force-app/main/default/objects/Account/fields/Branch_Call_Origin_Flag__c.field-meta.xml
<CustomField>
    <fullName>Branch_Call_Origin_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag for branches to be used in the call origin in case mgmt</description>
    <label>Branch Call Origin Flag</label>
    <type>Checkbox</type>
</CustomField>