force-app/main/default/objects/Account/fields/Branch_cntry_cd__c.field-meta.xml
<CustomField>
    <fullName>Branch_cntry_cd__c</fullName>
    <description>Branch country</description>
    <label>Branch Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>