force-app/main/default/objects/Account/fields/Branch_Controlled_Oil__c.field-meta.xml
<CustomField>
    <fullName>Branch_Controlled_Oil__c</fullName>
    <description>or( Include_for_EPI_Oil_Gallons_Flag__c = True,  isblank(Key_Account_Name__c))</description>
    <formula>or( Include_for_EPI_Oil_Gallons_Flag__c = True, Include_for_EPI_Oil_Gallons__c = True)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch Controlled Oil</label>
    <type>Checkbox</type>
</CustomField>