force-app/main/default/objects/Account/fields/Branch_Core_BU__c.field-meta.xml
<CustomField>
    <fullName>Branch_Core_BU__c</fullName>
    <description>Branch Core business unit used in cross-sell metrics</description>
    <label>Branch Core BU</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daylighting</fullName>
            </value>
            <value>
                <fullName>Emerald Services</fullName>
            </value>
            <value>
                <fullName>Field Services</fullName>
            </value>
            <value>
                <fullName>Industrial Services</fullName>
            </value>
            <value>
                <fullName>Kleen Performance Products</fullName>
            </value>
            <value>
                <fullName>Lodging</fullName>
            </value>
            <value>
                <fullName>Not eligible</fullName>
            </value>
            <value>
                <fullName>O&amp;G - Production Services</fullName>
            </value>
            <value>
                <fullName>O&amp;G - Seismic</fullName>
            </value>
            <value>
                <fullName>O&amp;G - Surface Rentals</fullName>
            </value>
            <value>
                <fullName>Safety-Kleen Branch Services</fullName>
            </value>
            <value>
                <fullName>Technical Services</fullName>
            </value>
            <value>
                <fullName>UMO</fullName>
            </value>
            <value>
                <fullName>RS Used Oil</fullName>
            </value>
            <value>
                <fullName>CYN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>