force-app/main/default/objects/Account/fields/Branch_CSM2__c.field-meta.xml
<CustomField>
    <fullName>Branch_CSM2__c</fullName>
    <label>Branch CSM2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>