force-app/main/default/objects/Account/fields/Branch_Dept_ID__c.field-meta.xml
<CustomField>
    <fullName>Branch_Dept_ID__c</fullName>
    <description>Department ID</description>
    <label>Branch Dept ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>