force-app/main/default/objects/Account/fields/branch_descr_amt2__c.field-meta.xml
<CustomField>
    <fullName>branch_descr_amt2__c</fullName>
    <description>Branch Hierarchy level 1</description>
    <label>Branch description2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>