force-app/main/default/objects/Account/fields/branch_descr_amt3__c.field-meta.xml
<CustomField>
    <fullName>branch_descr_amt3__c</fullName>
    <description>Branch Hierarchy level 3</description>
    <label>Branch description3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>