force-app/main/default/objects/Account/fields/Branch_Dispatcher2__c.field-meta.xml
<CustomField>
    <fullName>Branch_Dispatcher2__c</fullName>
    <label>Branch Dispatcher2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>