force-app/main/default/objects/Account/fields/Branch_Dispatcher__c.field-meta.xml
<CustomField>
    <fullName>Branch_Dispatcher__c</fullName>
    <label>Branch Dispatcher</label>
    <length>100</length>
    <type>Text</type>
</CustomField>