force-app/main/default/objects/Account/fields/Branch_DM__c.field-meta.xml
<CustomField>
    <fullName>Branch_DM__c</fullName>
    <label>Branch DM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>