force-app/main/default/objects/Account/fields/branch_latitude__c.field-meta.xml
<CustomField>
    <fullName>branch_latitude__c</fullName>
    <description>Branch lattitude</description>
    <label>Branch latitude</label>
    <length>50</length>
    <type>Text</type>
</CustomField>