force-app/main/default/objects/Account/fields/branch_longitude__c.field-meta.xml
<CustomField>
    <fullName>branch_longitude__c</fullName>
    <description>Branch Longitude</description>
    <label>Branch longitude</label>
    <length>50</length>
    <type>Text</type>
</CustomField>