force-app/main/default/objects/Account/fields/Branch_Operating_Business__c.field-meta.xml
<CustomField>
    <fullName>Branch_Operating_Business__c</fullName>
    <label>Branch Operating Business</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Airborne Imaging</fullName>
            </value>
            <value>
                <fullName>Camps &amp; Catering</fullName>
            </value>
            <value>
                <fullName>Carbon Technology</fullName>
            </value>
            <value>
                <fullName>Catalyst</fullName>
            </value>
            <value>
                <fullName>Chemical Cleaning</fullName>
            </value>
            <value>
                <fullName>Chemical Sales</fullName>
            </value>
            <value>
                <fullName>CHI Oil Collection</fullName>
            </value>
            <value>
                <fullName>Daylighting</fullName>
            </value>
            <value>
                <fullName>Decoking</fullName>
            </value>
            <value>
                <fullName>Directional Boring</fullName>
            </value>
            <value>
                <fullName>Drilling</fullName>
            </value>
            <value>
                <fullName>Emerald Services</fullName>
            </value>
            <value>
                <fullName>Field Services</fullName>
            </value>
            <value>
                <fullName>High Pressure</fullName>
            </value>
            <value>
                <fullName>Industrial Services</fullName>
            </value>
            <value>
                <fullName>JL Filtration</fullName>
            </value>
            <value>
                <fullName>Kleen Performance Products</fullName>
            </value>
            <value>
                <fullName>Locating</fullName>
            </value>
            <value>
                <fullName>Lodge Operations</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Materials Processing</fullName>
            </value>
            <value>
                <fullName>Mulching</fullName>
            </value>
            <value>
                <fullName>NavTech</fullName>
            </value>
            <value>
                <fullName>North American Remediation</fullName>
            </value>
            <value>
                <fullName>Oil Sands Ops</fullName>
            </value>
            <value>
                <fullName>Pipeline Coating</fullName>
            </value>
            <value>
                <fullName>Production Services</fullName>
            </value>
            <value>
                <fullName>Right of Way Services</fullName>
            </value>
            <value>
                <fullName>RS Used Oil</fullName>
            </value>
            <value>
                <fullName>Schrader</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>