force-app/main/default/objects/Account/fields/Branch_Opportunity_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Branch_Opportunity_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this field is selected then this branch can be used on an opportunity</description>
    <label>Branch Opportunity Allowed</label>
    <type>Checkbox</type>
</CustomField>