force-app/main/default/objects/Account/fields/Branch_Sales_Alignment_override__c.field-meta.xml
<CustomField>
    <fullName>Branch_Sales_Alignment_override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked the customers of the account owners aligned to this branch will be assigned to the area based off the customer&apos;s zip code rather than the branch&apos;s zip code.</description>
    <label>Branch Sales Alignment override</label>
    <type>Checkbox</type>
</CustomField>