force-app/main/default/objects/Account/fields/branch_state__c.field-meta.xml
<CustomField>
    <fullName>branch_state__c</fullName>
    <description>Branch State</description>
    <label>Branch state</label>
    <length>50</length>
    <type>Text</type>
</CustomField>