force-app/main/default/objects/Account/fields/Branch_Type_Fuels_Blending__c.field-meta.xml
<CustomField>
    <fullName>Branch_Type_Fuels_Blending__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates Fuels Blending Branch</description>
    <label>Branch Type Fuels Blending</label>
    <type>Checkbox</type>
</CustomField>