force-app/main/default/objects/Account/fields/Branch_Type_Incineration__c.field-meta.xml
<CustomField>
    <fullName>Branch_Type_Incineration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates Incineration branch</description>
    <label>Branch Type Incineration</label>
    <type>Checkbox</type>
</CustomField>