force-app/main/default/objects/Account/fields/Branch_Type_Landfill__c.field-meta.xml
<CustomField>
    <fullName>Branch_Type_Landfill__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates branch is a landfill</description>
    <label>Branch Type Landfill</label>
    <type>Checkbox</type>
</CustomField>