force-app/main/default/objects/Account/fields/Branch_Type_Waste_Water__c.field-meta.xml
<CustomField>
    <fullName>Branch_Type_Waste_Water__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates Branch is a Waste Water Treatment facility</description>
    <label>Branch Type Waste Water</label>
    <type>Checkbox</type>
</CustomField>