force-app/main/default/objects/Account/fields/branch_zip__c.field-meta.xml
<CustomField>
    <fullName>branch_zip__c</fullName>
    <description>Branch zip code</description>
    <label>Branch zip</label>
    <length>50</length>
    <type>Text</type>
</CustomField>