force-app/main/default/objects/Account/fields/Broker_Group__c.field-meta.xml
<CustomField>
    <fullName>Broker_Group__c</fullName>
    <label>Broker Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agent Only Broker</fullName>
            </value>
            <value>
                <fullName>Asset Owning Broker</fullName>
            </value>
            <value>
                <fullName>Field Service Only Broker</fullName>
            </value>
            <value>
                <fullName>Transfer Permit Only Broker</fullName>
            </value>
            <value>
                <fullName>Transfer Permit Only</fullName>
                <isActive>false</isActive>
                <label>Transfer Permit Only</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>