force-app/main/default/objects/Account/fields/BU_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>BU_Coordinator__c</fullName>
    <label>BU Coordinator</label>
    <length>100</length>
    <type>Text</type>
</CustomField>