force-app/main/default/objects/Account/fields/Business_Dev_Area__c.field-meta.xml
<CustomField>
    <fullName>Business_Dev_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Area of Region for busines development purposes</description>
    <label>Business Dev Area</label>
    <referenceTo>Sales_Market_Areas__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>