force-app/main/default/objects/Account/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Base</fullName>
                <default>true</default>
                <label>Base</label>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Locating</fullName>
            </value>
            <value>
                <fullName>Key</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>