force-app/main/default/objects/Account/fields/Buying_Decision__c.field-meta.xml
<CustomField>
    <fullName>Buying_Decision__c</fullName>
    <label>Buying Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Central Buying</fullName>
            </value>
            <value>
                <fullName>Locally Managed</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>