force-app/main/default/objects/Account/fields/Chain__c.field-meta.xml
<CustomField>
    <fullName>Chain__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chain Code Name</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2</booleanFilter>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Chain</value>
        </filterItems>
        <filterItems>
            <field>Account.Expired__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Chain)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>