force-app/main/default/objects/Account/fields/Chain_Code__c.field-meta.xml
<CustomField>
    <fullName>Chain_Code__c</fullName>
    <label>Chain WIN ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>