force-app/main/default/objects/Account/fields/Chain_SubType__c.field-meta.xml
<CustomField>
    <fullName>Chain_SubType__c</fullName>
    <description>Branch is the Regionally managed customers
Corporate are the Key Account customers
Target is a potential Key Account</description>
    <inlineHelpText>Branch is the Regionally managed customers
Corporate are the Key Account customers
Target is a potential Key Account</inlineHelpText>
    <label>Chain SubType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Target</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>