force-app/main/default/objects/Account/fields/Chain_Type__c.field-meta.xml
<CustomField>
    <fullName>Chain_Type__c</fullName>
    <description>This formula field is to capture the Chain Type. which is used in Disallowing_to_Change_Chain_Code_Name Validation Rule</description>
    <formula>TEXT(Chain__r.Type)</formula>
    <label>Chain Type</label>
    <type>Text</type>
</CustomField>