force-app/main/default/objects/Account/fields/CHESI_Branch__c.field-meta.xml
<CustomField>
    <fullName>CHESI_Branch__c</fullName>
    <description>This value populates when Account OS is CHES and PSP  is same as the territory master PSP else it will take the Account owner's Sales branch.</description>
    <label>CHESI Branch</label>
    <length>50</length>
    <type>Text</type>
</CustomField>