force-app/main/default/objects/Account/fields/City_State_Zip_Country__c.field-meta.xml
<CustomField>
    <fullName>City_State_Zip_Country__c</fullName>
    <formula>ShippingCity &amp; &apos; &apos; &amp; ShippingState &amp; &apos; &apos; &amp; ShippingPostalCode &amp; &apos; &apos; &amp; ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City State Zip Country</label>
    <type>Text</type>
</CustomField>