force-app/main/default/objects/Account/fields/CMD_Analyst__c.field-meta.xml
<CustomField>
    <fullName>CMD_Analyst__c</fullName>
    <label>CMD Analyst</label>
    <length>255</length>
    <type>Text</type> 
</CustomField>