force-app/main/default/objects/Account/fields/Competitor_Type__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Type__c</fullName>
    <label>Competitor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CHES Industrial</fullName> 
            </value>
            <value>
                <fullName>Clean Harbors ENV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>