force-app/main/default/objects/Account/fields/Consolidated_Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Consolidated_Bill_To__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consolidated Bill To</label>
    <type>Checkbox</type>
</CustomField>