force-app/main/default/objects/Account/fields/Corp_Account_Alert__c.field-meta.xml
<CustomField>
    <fullName>Corp_Account_Alert__c</fullName>
    <formula>IF(RecordType.Name = &apos;Corporate&apos; , Account_Alert__c,
IF(RecordType.Name = &apos;Customer Location&apos;,(Parent.Parent.Account_Alert__c),
IF(RecordType.Name = &apos;Customer&apos;,(Parent.Account_Alert__c), &apos;&apos;)))</formula>
    <label>Corp Account Alert</label>
    <type>Text</type>
</CustomField>