force-app/main/default/objects/Account/fields/Corp_Budget_Q1__c.field-meta.xml
<CustomField>
    <fullName>Corp_Budget_Q1__c</fullName>
    <formula>IF(YEAR( TODAY() ) == 2020,  X2020_Corp_Budget_Q1__c ,  X2021_Corp_Budget_Q1__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Corp Budget - Q1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>