force-app/main/default/objects/Account/fields/Corp_Budget_Q3__c.field-meta.xml
<CustomField>
    <fullName>Corp_Budget_Q3__c</fullName>
    <formula>IF(YEAR( TODAY() ) == 2020, X2020_Corp_Budget_Q3__c , X2021_Corp_Budget_Q3__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Corp Budget - Q3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>