force-app/main/default/objects/Account/fields/Corp_CEM_Name__c.field-meta.xml
<CustomField>
    <fullName>Corp_CEM_Name__c</fullName>
    <description>To display Corp CEM Name on Cust and Cust Location</description>
    <label>Corp CEM Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>