force-app/main/default/objects/Account/fields/Corp_Key_Account_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Corp_Key_Account_Pipeline__c</fullName>
    <inlineHelpText>Excludes prospecting opportunities. Pipeline includes opportunities at all accounts under the corporate umbrella. Updates every time a corporate account is visited in the CAMP app.</inlineHelpText>
    <label>Corp/Key Account Pipeline</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>