force-app/main/default/objects/Account/fields/Corp_PO_Management_Support__c.field-meta.xml
<CustomField>
    <fullName>Corp_PO_Management_Support__c</fullName>
    <description>This formula field is to populate PO_Management_Support__c value with PO Management Support if account has corporate parent and the in corporate parent account PO Management Support field is not null</description>
    <formula>IF(OR(RecordType.Name = &apos;Customer&apos;,RecordType.Name = &apos;Broker&apos;) &amp;&amp; Parent.Id != null &amp;&amp;  Parent.PO_Management_Support__c !=null , Parent.PO_Management_Support__r.FirstName + &apos; &apos;+Parent.PO_Management_Support__r.LastName,
IF(OR(RecordType.Name = &apos;Customer Location&apos;,RecordType.Name = &apos;Broker Location&apos;) 
&amp;&amp; Parent.Parent.Id != null &amp;&amp;  Parent.Parent.PO_Management_Support__c !=null, 
Parent.Parent.PO_Management_Support__r.FirstName + &apos; &apos;+Parent.Parent.PO_Management_Support__r.LastName,null))</formula>
    <label>Corp PO Management Support</label>
    <type>Text</type>
</CustomField>