force-app/main/default/objects/Account/fields/Corporate_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Address_2__c</fullName>
    <label>Corporate Address 2</label>
    <length>60</length>
    <type>Text</type>
</CustomField>