force-app/main/default/objects/Account/fields/Corporate_Address_ID__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Address_ID__c</fullName>
    <label>Corporate Address ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>