force-app/main/default/objects/Account/fields/Corporate_Address_Validated__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Address_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calgary Address Validated</label>
    <type>Checkbox</type>
</CustomField>