force-app/main/default/objects/Account/fields/Corporate_Type__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Type__c</fullName>
    <label>Corporate Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Corporate</fullName>
                <default>true</default>
                <label>Corporate</label>
            </value>
            <value>
                <fullName>Corporate-Retired</fullName>
            </value>
            <value>
                <fullName>Key</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>