force-app/main/default/objects/Account/fields/Count_of_Children__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Children__c</fullName>
    <description>Count of Children Accounts</description>
    <label>Count of Children Accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>