force-app/main/default/objects/Account/fields/Credit_Cutoff__c.field-meta.xml
<CustomField>
    <fullName>Credit_Cutoff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Cutoff</label>
    <type>Checkbox</type>
</CustomField>