force-app/main/default/objects/Account/fields/Credit_Status__c.field-meta.xml
<CustomField>
    <fullName>Credit_Status__c</fullName>
    <defaultValue>&quot;Active&quot;</defaultValue>
    <label>Credit Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Archive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>